# qtcreator-plugin-onedark

./: CMakeLists.txt  README.md  faderholder.cpp  faderholder.h  onedark.json.in  onedark.qrc  onedark.qss  onedarkproxystyle.cpp  onedarkproxystyle.h  optionsdialog.cpp  optionsdialog.h  optionspage.cpp  optionspage.h  plugin.cpp  plugin.h  settings.cpp  settings.h  tabbarhoverfilter.cpp  tabbarhoverfilter.h  widthstretcher.cpp  widthstretcher.h
.github/workflows/: ci.yml
